--- a/RTE/test-output/old/RTE Job Smoke/methods.html
+++ b/RTE/test-output/old/RTE Job Smoke/methods.html
@@ -1,50 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>RTE Job Smoke</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>22/07/15 16:53:35</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToOneOrderProcess.rteOneToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">rteOneToOneOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:47</td>   <td>12363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="98dc9b">  <td>22/07/15 16:53:48</td>   <td>12496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToManyOrderProcess.rteOneToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">rteOneToManyOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:57</td>   <td>22096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:48</td>   <td>12495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:06</td>   <td>30529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:57</td>   <td>22351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a6a482">  <td>22/07/15 16:53:57</td>   <td>22352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToOneOrderProcess.rteManyToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">rteManyToOneOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="cdf8bd">  <td>22/07/15 16:54:06</td>   <td>30676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEFlowWithRejectResend.rteRejectResendScan()[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@740cae06]">rteRejectResendScan</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:06</td>   <td>30676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@740cae06]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:14</td>   <td>39008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@740cae06]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="d4ae6f">  <td>22/07/15 16:54:14</td>   <td>39119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToManyOrderProcess.rteManyToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">rteManyToManyOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:22</td>   <td>46847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:14</td>   <td>39119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a4ebf2">  <td>22/07/15 16:54:22</td>   <td>47010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTECrudOperations.rteCrudOperations()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">rteCrudOperations</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 17:15:34</td>   <td>1318984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:54:22</td>   <td>47010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 17:16:07</td>   <td>1351563</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.CompareCharges@15bb5034]">&lt;&lt;SendEmail</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 16:53:11</td>   <td>-24447</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.CompareCharges@15bb5034]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 17:15:34</td>   <td>1319115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.CompareCharges@15bb5034]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 17:16:07</td>   <td>1351466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.CompareCharges@15bb5034]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="9175d8">  <td>22/07/15 17:15:34</td>   <td>1319116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CompareCharges.rteCompareCharges()[pri:0, instance:rte_RTEJobCreation.CompareCharges@15bb5034]">rteCompareCharges</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:08:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>22/07/25 11:07:59</td>   <td>-17091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToOneOrderProcess.rteOneToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">rteOneToOneOrderProcess</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:07:59</td>   <td>-17104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@72e5a8e]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="98dc9b">  <td>22/07/25 11:08:17</td>   <td>218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToManyOrderProcess.rteOneToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">rteOneToManyOrderProcess</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:16:23</td>   <td>486313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:08:17</td>   <td>217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@63376bed]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:16:32</td>   <td>495073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a6a482">  <td>22/07/25 11:16:23</td>   <td>486560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToOneOrderProcess.rteManyToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">rteManyToOneOrderProcess</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:16:23</td>   <td>486559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@3e27aa33]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:26:53</td>   <td>1116743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@740cae06]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:16:32</td>   <td>495263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@740cae06]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="cdf8bd">  <td>22/07/25 11:16:32</td>   <td>495263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToManyOrderProcess.rteManyToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@740cae06]">rteManyToManyOrderProcess</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:27:03</td>   <td>1126711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@6d4d66d2]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="d4ae6f">  <td>22/07/25 11:26:53</td>   <td>1116930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEFlowWithRejectResend.rteRejectResendScan()[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@6d4d66d2]">rteRejectResendScan</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:26:53</td>   <td>1116930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@6d4d66d2]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:55:40</td>   <td>2843640</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&lt;&lt;SendEmail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:07:16</td>   <td>-60629</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:55:40</td>   <td>2843492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/07/25 11:27:03</td>   <td>1126915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@2135449562</td>   <td></td> </tr>
+<tr bgcolor="a4ebf2">  <td>22/07/25 11:27:03</td>   <td>1126915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTECrudOperations.rteCrudOperations()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@53fe15ff]">rteCrudOperations</td> 
+  <td>main@2135449562</td>   <td></td> </tr>
 </table>
